--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 target/
+.classpath
+.project
+.settings
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -7,6 +10,11 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+rebel.xml
+src/main/resources/git.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/bin/
+/site/
+diagnostic*
