--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>life.genny</groupId>
 	<artifactId>pontoon</artifactId>
+
 	<version>2.1.0</version>
-	<name>pontoon</name>
+
+	<name>bridge</name>
 	<properties>
-		<qwanda-utils.version>2.1.0</qwanda-utils.version>
+		<qwanda-utils.version>${version}</qwanda-utils.version>
 		<log4j-core-version>2.5</log4j-core-version>
+		<junit-version>4.12</junit-version>
+
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit-version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>life.genny</groupId>
 			<artifactId>genny-verticle-rules</artifactId>
@@ -26,9 +43,9 @@
 			<version>${log4j-core-version}</version>
 		</dependency>
 		<dependency>
-			<groupId>life.genny</groupId>
-			<artifactId>qwanda-utils</artifactId>
-			<version>${qwanda-utils.version}</version>
+			<groupId>com.github.luben</groupId>
+			<artifactId>zstd-jni</artifactId>
+			<version>1.3.8-6</version>
 		</dependency>
 	</dependencies>
 	<repositories>
@@ -57,7 +74,16 @@
 			</resource>
 		</resources>
 		<plugins>
-
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>0.10.0</version>
+				<configuration>
+					<to>
+						<image>registry.hub.docker.com/gennyproject/bridge</image>
+					</to>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -65,28 +91,6 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<id>unpack-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<excludeScope>system</excludeScope>
-							<excludes>META-INF/*.SF</excludes>
-							<excludes>META-INF/*.DSA</excludes>
-							<excludes>META-INF/*.RSA</excludes>
-							<excludeGroupIds>junit,org.mockito,org.hamcrest</excludeGroupIds>
-							<outputDirectory>${project.build.directory}/classes</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -110,7 +114,7 @@
 								</transformer>
 							</transformers>
 							<artifactSet />
-							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+							<outputFile>${project.build.directory}/${project.artifactId}-fat.jar</outputFile>
 							<filters>
 								<filter>
 									<artifact>*:*</artifact>
@@ -137,7 +141,7 @@
 						</goals>
 						<configuration>
 							<generateGitPropertiesFile>true</generateGitPropertiesFile>
-							<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
+							<generateGitPropertiesFilename>target/classes/${project.name}-git.properties</generateGitPropertiesFilename>
 							<!-- If you'd like to tell the plugin where your .git directory is, 
 								use this setting, otherwise we'll perform a search trying to figure out the 
 								right directory. It's better to add it explicite IMHO. -->
@@ -175,7 +179,7 @@
 							<generateGitPropertiesFile>true</generateGitPropertiesFile>
 							<!-- The path for the to be generated properties file, it's relative 
 								to ${project.basedir} -->
-							<generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
+							<generateGitPropertiesFilename>src/main/resources/${project.name}-git.properties</generateGitPropertiesFilename>
 
 							<!-- Denotes the format to save properties in. Valid options are "properties" 
 								(default) and "json". Properties will be saved to the generateGitPropertiesFilename 
